# socketchatting

./: README.md  package-lock.json  package.json
Client_user/client-user/: .env  package-lock.json  package.json
Client_user/client-user/src/: App.js  NotFound.js  Router.js  global.css  index.js  websocket.js  websocket.ts
Client_user/client-user/src/components/: RoomCard.js  RoomCard.module.css
Client_user/client-user/src/hooks/: websocket.js
Client_user/client-user/src/pages/: Home.css  Home.js  Home.module.css  Lobby.js  Lobby.module.css  Talk.css  Talk.js  Talk.module.css
chat-server/: pyproject.toml
chat-server/src/chat_server/: __init__.py  chat_room.py  client_session.py  room_manager.py  server_main.py  sess_manager.py
chat-server/src/client/: __init__.py  client_main.py
chat-server/src/common/: session.py
chat-server/src/dummy_client/: __init__.py  client_main.py
chat-server/src/server/: __init__.py  chatting_room.py  room_manager.py  server_main.py
chat-server/src/server_core/: __init__.py  ws_session.py
node_test_server/: WebSocketEchoServer.js  package-lock.json  package.json
py-server/: app.py  pyproject.toml
