[tool.pdm]

[tool.pdm.scripts]
chat_server = {call = "src.chat_server:main"}
dummy_client = {call = "src.dummy_client:main"}

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "websockets>=10.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
