[tool.pdm]

[tool.pdm.scripts]
server = {call = "src.server:main"}
client = {call = "src.client:main"}

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "websockets>=10.4",
    "attrs>=22.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
